syntax = "proto3";

package fp_puncher;

message HostConnect {
    string host_name = 1;
    optional string password = 2;
}

message HostResponse {
    string token = 1;
}

message HostHeartbeat {
    string host_name = 1;
    string token = 2;
}

message ClientConnect {
    string host_name = 1;
    optional string password = 2;
}

message ClientResponse {
    string host_token = 1;
    string ip = 2;
    uint32 port = 3;
}

message ConnectMessage {
    oneof msg {
        HostConnect host = 1;
        ClientConnect client = 2;
        HostHeartbeat heartbeat = 3;
    }
}

message ServerMessage {
    oneof msg {
        HostResponse host = 1;
        ClientResponse client = 2;
    }
}